--- a/scss/blocks/_accordion-menu.scss
+++ b/scss/blocks/_accordion-menu.scss
@@ -95,7 +95,7 @@
     bottom: 0;
     right: 0;
     left: 0;
-    background: rgba(0, 0, 0, 0.7);
+    background: rgba(#000, 0.7);
   }
 }
 
@@ -172,8 +172,8 @@
     width: 20px;
     height: 20px;
     position: absolute;
-    top: 15px;
-    right: 20px;
+    top: 8px;
+    right: 17px;
     z-index: $z-accordion-menu-close;
 
     &::after,
