--- a/scss/core/_variables.scss
+++ b/scss/core/_variables.scss
@@ -17,7 +17,7 @@ $content_width: 960px;
 // z-index
 $z-navpage: 10;
 $z-popup: 50;
-$z-accordion-menu-text: 20;
-$z-accordion-menu-close: 25;
-$z-hamburger: 40;
-$z-menu-mobile: 30;
+$z-accordion-menu-text: 40;
+$z-accordion-menu-close: 45;
+$z-hamburger: 30;
+$z-menu-mobile: 20;
